--- a/config.json
+++ b/config.json
@@ -18,8 +18,8 @@
   "16": "o",
   "17": "n",
   "facebookAccount": {
-    "email": "9861101179",
-    "password": "sum123",
+    "email": "yukirabotz@gmail.cim",
+    "password": "Yukira3210@#",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
@@ -36,7 +36,7 @@
     "hideNotiMessage": true
   },
   "adminBot": [
-    "100089883865494",
+    "100087872880976",
     ""
   ],
   "whiteListMode": {
