--- a/config.json
+++ b/config.json
@@ -18,8 +18,8 @@
   "16": "o",
   "17": "n",
   "facebookAccount": {
-    "email": "yukirabotz@gmail.cim",
-    "password": "Yukira3210@#",
+    "email": "yukirabotz@gmail.com",
+    "password": "Sumi3210@#",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
