--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
   "17": "n",
   "facebookAccount": {
     "email": "yukirabotz@gmail.com",
-    "password": "Sumi3210@#",
+    "password": "Shreeram3210@",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
